src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__import_named_single.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
import {read_file} from "fs"
}

OK
.fn @main
  params 0
  stack 2
  .locals
     = r1
  .code
  0  import l0   ; {import "fs", n=1}
  1  lnil r0
  2  ret
