src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__index_set_var.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let a = [0]
let i = 0
a[i] = 1
}

OK
.fn @main
  params 0
  stack 4
  .locals
    a = r1
    i = r2
  .code
  0  llist r1, 1
  1  lsmi r2, 0
  2  sidxn r1, 0, r2
  3  lsmi r2, 0
  4  lsmi r3, 1
  5  sidx r1, r2, r3
  6  lnil r0
  7  ret
