src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__index_use.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
[][0]


OK
.fn @main
  params 0
  stack 1
  .code
  0  llist r0, 0
  1  lidxn r0, r0, 0
  2  ret
