src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__index_use_var.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 3
  .locals
    i = r1
  .code
  0  lsmi r1, 0
  1  larr r0, 0
  2  lidx r0, r0, r1
  3  ret
