src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__int.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 1
  .code
  0  lsmi r0, 0
  1  ret
