src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__int_large.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
32768

OK
.fn @main
  params 0
  stack 1
  .code
  0  lint r0, 32768
  1  ret
